--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 </head>
 
 <body>
-<div class="flex-wrapper">
-  <div class="qr-code-card">
-    <img class="qr-code-img" src="./images/image-qr-code.png" />
-    <div class="card-data">
-      <p class="card-title">Improve your front-end skills by building projects</p>
-      <p class="card-instruction">Scan the QR code to visit Frontend Mentor and take your coding skills to the next
-        level</p>
+  <div class="flex-wrapper">
+    <div class="qr-code-card">
+      <img class="qr-code-img" src="./images/image-qr-code.png" alt="QR code" />
+      <div class="card-data">
+        <p class="card-title">Improve your front-end skills by building projects</p>
+        <p class="card-instruction">Scan the QR code to visit Frontend Mentor and take your coding skills to the next
+          level</p>
+      </div>
     </div>
   </div>
-</div>
 
 
 
