--- a/index.html
+++ b/index.html
@@ -27,23 +27,24 @@
 </head>
 
 <body>
-  <div class="flex-wrapper">
-    <div class="qr-code-card">
-      <img class="qr-code-img" src="./images/image-qr-code.png" alt="QR code" />
-      <div class="card-data">
-        <p class="card-title">Improve your front-end skills by building projects</p>
-        <p class="card-instruction">Scan the QR code to visit Frontend Mentor and take your coding skills to the next
-          level</p>
+  <main>
+    <div class="flex-wrapper">
+      <div class="qr-code-card">
+        <img class="qr-code-img" src="./images/image-qr-code.png" alt="QR code" />
+        <div class="card-data">
+          <p class="card-title">Improve your front-end skills by building projects</p>
+          <p class="card-instruction">Scan the QR code to visit Frontend Mentor and take your coding skills to the next
+            level</p>
+        </div>
       </div>
     </div>
-  </div>
-
-
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Scott Starkey</a>.
-  </div>
+  </main>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Scott Starkey</a>.
+    </div>
+  </footer>
 </body>
 
 </html>
