--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="qr-code-card">
         <img class="qr-code-img" src="./images/image-qr-code.png" alt="QR code" />
         <div class="card-data">
-          <p class="card-title">Improve your front-end skills by building projects</p>
+          <h1 class="card-title">Improve your front-end skills by building projects</h1>
           <p class="card-instruction">Scan the QR code to visit Frontend Mentor and take your coding skills to the next
             level</p>
         </div>
